// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewardsController exposes expected state to UI 1`] = `
{
  "accounts": {},
  "activeAccount": null,
  "activeBoosts": {},
  "campaignParticipantStatus": {},
  "campaigns": {},
  "offDeviceSubscriptionAccounts": {},
  "ondoCampaignActivity": {},
  "ondoCampaignDeposits": {},
  "ondoCampaignLeaderboard": {},
  "ondoCampaignLeaderboardPositions": {},
  "ondoCampaignPortfolio": {},
  "pointsEvents": {},
  "rewardsEnvUrl": null,
  "seasonStatuses": {},
  "seasons": {},
  "subscriptionReferralDetails": {},
  "subscriptions": {},
  "unlockedRewards": {},
}
`;

exports[`RewardsController includes expected state in state logs 1`] = `
{
  "accounts": {},
  "activeAccount": null,
  "activeBoosts": {},
  "campaignParticipantStatus": {},
  "campaigns": {},
  "offDeviceSubscriptionAccounts": {},
  "ondoCampaignActivity": {},
  "ondoCampaignDeposits": {},
  "ondoCampaignLeaderboard": {},
  "ondoCampaignLeaderboardPositions": {},
  "ondoCampaignPortfolio": {},
  "pointsEstimateHistory": [],
  "pointsEvents": {},
  "seasonStatuses": {},
  "seasons": {},
  "subscriptionReferralDetails": {},
  "subscriptions": {},
  "unlockedRewards": {},
}
`;

exports[`RewardsController metadata includes expected state in debug snapshots 1`] = `{}`;

exports[`RewardsController persists expected state 1`] = `
{
  "accounts": {},
  "activeAccount": null,
  "activeBoosts": {},
  "campaignParticipantStatus": {},
  "campaigns": {},
  "offDeviceSubscriptionAccounts": {},
  "ondoCampaignActivity": {},
  "ondoCampaignDeposits": {},
  "ondoCampaignLeaderboard": {},
  "ondoCampaignLeaderboardPositions": {},
  "ondoCampaignPortfolio": {},
  "pointsEstimateHistory": [],
  "pointsEvents": {},
  "rewardsEnvUrl": null,
  "seasonStatuses": {},
  "seasons": {},
  "subscriptionReferralDetails": {},
  "subscriptions": {},
  "unlockedRewards": {},
}
`;
